# lxc-templates

./: Makefile.am  autogen.sh  configure.ac
config/: Makefile.am  alpine.common.conf.in
templates/: Makefile.am  lxc-alpine.in  lxc-altlinux.in  lxc-anolis.in  lxc-archlinux.in  lxc-centos.in  lxc-debian.in  lxc-devuan.in  lxc-fedora.in  lxc-gentoo.in  lxc-kali.in  lxc-openeuler.in  lxc-openmandriva.in  lxc-opensuse.in  lxc-oracle.in  lxc-plamo.in  lxc-pld.in  lxc-sabayon.in  lxc-slackware.in  lxc-sparclinux.in  lxc-sshd.in  lxc-voidlinux.in
