templatesdir=@LXCTEMPLATEDIR@

templates_SCRIPTS = \
	lxc-alpine \
	lxc-altlinux \
	lxc-archlinux \
	lxc-centos \
	lxc-cirros \
	lxc-debian \
	lxc-fedora \
	lxc-fedora-legacy \
	lxc-gentoo \
	lxc-openmandriva \
	lxc-opensuse \
	lxc-oracle \
	lxc-plamo \
	lxc-pld \
	lxc-slackware \
	lxc-sshd \
	lxc-ubuntu \
	lxc-ubuntu-cloud \
	lxc-sparclinux \
	lxc-voidlinux \
	lxc-sabayon
